--- a/css/hero.scss
+++ b/css/hero.scss
@@ -1,4 +1,4 @@
-hero {
+.hero {
     background: url(https://rudanastasia.github.io/surfboard/img/decor/bgmain.png) center center no-repeat;
     background-color: white;
     height: 100vh;
