--- a/css/hero.scss
+++ b/css/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background: url(https://rudanastasia.github.io/surfboard/img/decor/bgmain.png) center center no-repeat;
+    background: url(https://rudanastasia.github.io/surfboard/img/decor/bgmain.png) center 100% no-repeat;
     background-color: white;
     height: 100vh;
     min-height: 650px;
