--- a/css/hero.scss
+++ b/css/hero.scss
@@ -24,10 +24,12 @@
     font-weight: bold;
     margin-bottom: 15px;
     text-transform: uppercase;
+    color: white;
 }
 
 .hero__title-description {
     font-size: 21px;
     margin-bottom: 28px;
     padding-right: 10%;
+    color: white;
 }
