--- a/css/btn.scss
+++ b/css/btn.scss
@@ -7,7 +7,7 @@
     line-height: 1;
     text-decoration: none;
 
-    &--theme--white {
+    &--theme--yellow {
         background: #FEDB3F;
         color: black;
 
