--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
   height: 100%;
 }
 
-.body {
+body {
   font-size: 18px;
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
@@ -23,7 +23,7 @@ body {
 }
 
 .container {
-  width: containerWidth;
+  width: 940px;
   margin: 0 auto;
 }
 
@@ -41,20 +41,20 @@ table {
   border-collapse: collapse;
 }
 
-.ul {
+ul {
   padding: 0;
   margin: 0;
 }
-.ul li {
+ul li {
   list-style: none;
 }
 
-.p {
+p {
   padding: 0;
   margin: 0;
 }
 
-.footer {
+footer {
   position: relative;
   width: 100%;
 }
@@ -68,13 +68,13 @@ a {
   color: inherit;
 }
 
-.img {
+img {
   display: block;
   max-width: 100%;
 }
 
-hero {
-  background: url(https://rudanastasia.github.io/surfboard/img/decor/bgmain.png) center center no-repeat;
+.hero {
+  background: url(https://rudanastasia.github.io/surfboard/img/decor/bgmain.png) center top no-repeat;
   background-color: white;
   height: 100vh;
   min-height: 650px;
@@ -105,12 +105,14 @@ hero {
   font-weight: bold;
   margin-bottom: 15px;
   text-transform: uppercase;
+  color: white;
 }
 
 .hero__title-description {
   font-size: 21px;
   margin-bottom: 28px;
   padding-right: 10%;
+  color: white;
 }
 
 .header {
@@ -123,6 +125,13 @@ hero {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  color: white;
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .menu__list {
@@ -132,6 +141,7 @@ hero {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-right: 104px;
 }
 
 .menu__item {
@@ -189,6 +199,8 @@ hero {
 .feature__text {
   font-size: 16px;
   max-width: 85px;
+  color: white;
+  font-weight: bold;
 }
 
 .btn {
@@ -200,11 +212,11 @@ hero {
   line-height: 1;
   text-decoration: none;
 }
-.btn--theme--white {
+.btn--theme--yellow {
   background: #FEDB3F;
   color: black;
 }
-.btn--theme--white:hover {
+.btn--theme--yellow:hover {
   color: black;
   background: white;
 }
