--- a/css/main.scss
+++ b/css/main.scss
@@ -15,3 +15,7 @@ $darkGreen: #0b4d3c;
 @import "header";
 @import "features";
 @import "btn";
+@import "section";
+@import "headline";
+@import "benefits";
+@import "benefit";
