--- a/css/benefit.scss
+++ b/css/benefit.scss
@@ -20,3 +20,14 @@
     left: 21%;
     transform: translate(-50% -50%);
 }
+
+.benefit__title {
+    font-weight: bold;
+}
+
+.benefit_desc {
+    font-size: 18px;
+    line-height: 21.6px;
+    text-align: center;
+    width: 279px;
+}
