--- a/css/benefits.scss
+++ b/css/benefits.scss
@@ -1,5 +1,6 @@
 .benefits {
     display: flex;
+    margin-top: 30px;
 }
 
 .benefits__item {
@@ -11,7 +12,7 @@
         content: url(https://rudanastasia.github.io/surfboard/img/icons/separator.png);
         position: absolute;
         right: 0;
-        top: 30px;
+        top: 52px;
         transform: translateX(50%);
     }
 
