--- a/css/main.scss
+++ b/css/main.scss
@@ -19,3 +19,5 @@ $darkGreen: #0b4d3c;
 @import "headline";
 @import "benefits";
 @import "benefit";
+@import "reviews";
+@import "interactive-avatar";
