--- a/css/btn.scss
+++ b/css/btn.scss
@@ -6,6 +6,7 @@
     border-radius: 100px;
     line-height: 1;
     text-decoration: none;
+    border: none;
 
     &--theme--yellow {
         background: #FEDB3F;
@@ -14,6 +15,16 @@
         &:hover {
             color: black;
             background: white;
+        }
+    }
+
+    &--theme--transparent {
+        background: transparent;
+        color: white;
+        text-transform: none;
+
+        &:hover {
+            color: #FFD517;
         }
     }
 }
