--- a/css/main.css
+++ b/css/main.css
@@ -211,6 +211,7 @@ img {
   border-radius: 100px;
   line-height: 1;
   text-decoration: none;
+  border: none;
 }
 .btn--theme--yellow {
   background: #FEDB3F;
@@ -219,6 +220,14 @@ img {
 .btn--theme--yellow:hover {
   color: black;
   background: white;
+}
+.btn--theme--transparent {
+  background: transparent;
+  color: white;
+  text-transform: none;
+}
+.btn--theme--transparent:hover {
+  color: #FFD517;
 }
 
 .section {
@@ -232,6 +241,13 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
 }
+.section--font-color--white {
+  color: white;
+  background: url(https://rudanastasia.github.io/surfboard/img/decor/cta.png) center top no-repeat;
+}
+.section--font-color--white .section__title {
+  color: inherit;
+}
 
 .section__title {
   font-size: 48px;
@@ -243,6 +259,7 @@ img {
 
 .headline {
   text-align: center;
+  margin-top: 80px;
 }
 
 .headline__title {
@@ -257,6 +274,7 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-top: 30px;
 }
 
 .benefits__item {
@@ -270,7 +288,7 @@ img {
   content: url(https://rudanastasia.github.io/surfboard/img/icons/separator.png);
   position: absolute;
   right: 0;
-  top: 30px;
+  top: 52px;
   -webkit-transform: translateX(50%);
           transform: translateX(50%);
 }
@@ -302,8 +320,207 @@ img {
   width: 75px;
   height: 69px;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 21%;
+  left: 21%;
   -webkit-transform: translate(-50% -50%);
           transform: translate(-50% -50%);
+}
+
+.benefit__title {
+  font-weight: bold;
+}
+
+.benefit_desc {
+  font-size: 18px;
+  line-height: 21.6px;
+  text-align: center;
+  width: 279px;
+}
+
+.reviews__display {
+  background: #F8FAF9;
+  padding: 50px 45px 34px;
+}
+
+.reviews__display-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.reviews__switcher {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 20px;
+}
+
+.reviews__avatar {
+  width: 254px;
+  height: 260px;
+  margin-right: 20px;
+}
+
+.reviews__avatar-img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.reviews__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.reviews__title {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 22px;
+}
+
+.reviews__text {
+  margin-bottom: 36px;
+}
+
+.reviews__author {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.interactive-avatar {
+  width: 80px;
+  height: 80px;
+  border: 6px solid transparent;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+}
+.interactive-avatar--active {
+  border-color: #FEDB3F;
+}
+
+.interactive-avatar__link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: block;
+}
+
+.interactive-avatar__img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.form__col {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-right: 20px;
+}
+.form__col:last-child {
+  margin-right: 0;
+}
+
+.form__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 18px;
+}
+
+.form__block {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-right: 20px;
+}
+.form__block:last-child {
+  margin-right: 0;
+}
+
+.form__input {
+  width: 100%;
+  border: none;
+  padding: 18px 11px;
+  border: solid 3px transparent;
+}
+.form__input--textarea {
+  height: 180px;
+  resize: none;
+}
+.form__input:focus {
+  border-color: #FEDB3F;
+  outline: none;
+}
+
+.form__controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.radio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.radio--checkbox .radio__visible {
+  border-radius: 0;
+}
+.radio--checkbox .radio__visible:before {
+  background: url(https://rudanastasia.github.io/surfboard/img/icons/checkmark.png) center center no-repeat;
+}
+
+.radio__elem {
+  display: none;
+}
+.radio__elem:checked ~ .radio__visible::before {
+  display: block;
+}
+
+.radio__visible {
+  width: 26px;
+  height: 26px;
+  position: relative;
+  border-radius: 50%;
+  background: white;
+}
+.radio__visible:before {
+  content: "";
+  width: 14px;
+  height: 14px;
+  background: #FEDB3F;
+  border-radius: 50%;
+  position: absolute;
+  display: none;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
