--- a/css/section.scss
+++ b/css/section.scss
@@ -7,6 +7,7 @@
     &--font-color--white {
         color: white;
         background: url(https://rudanastasia.github.io/surfboard/img/decor/foarm-bg.png) center top no-repeat;
+        background-size: cover;
 
         .section__title {
             color: inherit;
