--- a/css/main.scss
+++ b/css/main.scss
@@ -26,4 +26,4 @@ $z-fixed-menu: 100;
 @import "interactive-avatar";
 @import "form";
 @import "radio";
-@import "fixed_menu";
+@import "fixed-menu";
