--- a/css/form.scss
+++ b/css/form.scss
@@ -13,7 +13,6 @@
 
 .form__row {
     display: flex;
-    margin-bottom: 18px;
 }
 
 .form__block {
@@ -32,7 +31,7 @@
     border: solid 3px transparent;
 
     &--textarea {
-        height: 180px;
+        height: 148px;
         resize: none;
 
     }
@@ -46,4 +45,9 @@
 .form__controls {
     display: flex;
     flex-wrap: wrap;
+    padding-left: 12px;
+}
+
+.form__btns {
+    margin-top: 53px;
 }
