--- a/css/reviews.scss
+++ b/css/reviews.scss
@@ -1,6 +1,6 @@
 .reviews__display {
     background: #F8FAF9;
-    padding: 50px 45px 34px;
+    padding: 42px 39px 34px;
 }
 
 .reviews__display-inner {
@@ -32,14 +32,18 @@
 .reviews__title {
     font-size: 30px;
     font-weight: bold;
-    margin-bottom: 22px;
+    margin-bottom: 9px;
+    margin-top: 20px;
+    padding-left: 16px;
 }
 
 .reviews__text {
     margin-bottom: 36px;
+    padding-left: 20px;
 }
 
 .reviews__author {
     font-size: 18px;
     font-weight: bold;
+    padding-left: 20px;
 }
