--- a/css/section.scss
+++ b/css/section.scss
@@ -1,5 +1,5 @@
 .section {
-    height: 100vh;
+    /*height: 100vh;*/
     min-height: 650px;
     flex-direction: column;
     justify-content: center;
