--- a/css/main.scss
+++ b/css/main.scss
@@ -1,12 +1,20 @@
 $containerWidth: 940px;
 $baseFontSize: 18px;
 
+
+//breakpoints
+$tablets: 768px;
+$phones: 480px;
+
+
 //colors
 $blue: #61c4d9;
 $darkGreen: #0b4d3c;
 
 //z-index
 $z-fixed-menu: 100;
+
+@import "media";
 
 //normalize
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css");
@@ -27,3 +35,4 @@ $z-fixed-menu: 100;
 @import "form";
 @import "radio";
 @import "fixed-menu";
+@import "hamburger";
