--- a/css/benefit.scss
+++ b/css/benefit.scss
@@ -1,21 +1,34 @@
 .benefit {
     text-align: center;
+
+    @include phones {
+        display: flex;
+        text-align: left;
+    }
 }
+
+.benefit__image {
+    @include phones {
+        margin-bottom: 0;
+        margin-right: 28px;
+    }
+}
+
 
 .benefit__image-wrapper {
     display: inline-block;
-    width: 126px;
-    height: 126px;
+    width: 7.875rem;
+    height: 7.875rem;
     position: relative;
     background: #F2F5F4;
     border-radius: 50%;
     overflow: hidden;
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
 }
 
 .benefit__icon {
-    width: 75px;
-    height: 69px;
+    width: 4.6875rem;
+    height: 4.3125rem;
     position: absolute;
     top: 21%;
     left: 21%;
@@ -24,12 +37,16 @@
 
 .benefit__title {
     font-weight: bold;
-    font-size: 27px;
+    font-size: 1.6875rem;
 }
 
 .benefit__desc {
-    font-size: 18px;
-    line-height: 21.6px;
+    font-size: 1.125rem;
+    line-height: 1.35rem;
     text-align: center;
-    width: 279px;
+    width: 17.4375rem;
+
+    @include phones {
+        text-align: left;
+    }
 }
