--- a/css/benefits.scss
+++ b/css/benefits.scss
@@ -1,6 +1,10 @@
 .benefits {
     display: flex;
-    margin-top: 30px;
+    margin-top: 1.875rem;
+
+    @include phones {
+        flex-direction: column;
+    }
 }
 
 .benefits__item {
@@ -8,12 +12,21 @@
     padding: 0 3%;
     position: relative;
 
+    @include phones {
+        padding: 0;
+        margin-bottom: 25px;
+    }
+
     &:before {
         content: url(https://rudanastasia.github.io/surfboard/img/icons/separator.png);
         position: absolute;
         right: 0;
-        top: 52px;
+        top: 3.25rem;
         transform: translateX(50%);
+
+        @include phones {
+            display: none;
+        }
     }
 
     &:first-child {
