--- a/css/btn.scss
+++ b/css/btn.scss
@@ -1,9 +1,9 @@
 .btn {
-    font-size: 19px;
+    font-size: 1.1875rem;
     font-weight: bold;
-    padding: 18px 35px;
+    padding: 1.125rem 2.1875rem;
     text-transform: uppercase;
-    border-radius: 100px;
+    border-radius: 6.25rem;
     line-height: 1;
     text-decoration: none;
     border: none;
