--- a/css/features.scss
+++ b/css/features.scss
@@ -3,8 +3,8 @@
 }
 
 .features__item {
-    margin-right: 46px;
-    margin-top: 78px;
+    margin-right: 2.875rem;
+    margin-top: 4.875rem;
 
     &:last-child {
         margin-right: 0;
@@ -17,13 +17,13 @@
 }
 
 .feature__icon {
-    width: 45px;
-    margin-right: 7px;
+    width: 2.8125rem;
+    margin-right: 0.4375rem;
 }
 
 .feature__text {
-    font-size: 16px;
-    max-width: 85px;
+    font-size: 1rem;
+    max-width: 5.3125rem;
     color: white;
     font-weight: bold;
 }
