--- a/css/fixed-menu.scss
+++ b/css/fixed-menu.scss
@@ -1,12 +1,16 @@
 .fixed-menu {
     position: fixed;
-    top: 20%;
+    top: 23%;
     right: 3%;
     z-index: $z-fixed-menu;
+
+    @include tablets {
+        display: none;
+    }
 }
 
 .fixed-menu__item {
-    margin-bottom: 5px;
+    margin-bottom: 0.3125rem;
 
     &--active {
         .fixed-menu__link {
@@ -16,17 +20,17 @@
 }
 
 .fixed-menu__link {
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
     border-radius: 50%;
-    border: 1px solid transparent;
+    border: 0.0625rem solid transparent;
     display: block;
     position: relative;
 
     &:before {
         content: "";
-        width: 6px;
-        height: 6px;
+        width: 0.375rem;
+        height: 0.375rem;
         border-radius: 50%;
         display: block;
         background: white;
