--- a/css/form.scss
+++ b/css/form.scss
@@ -1,12 +1,25 @@
 .form {
     display: flex;
+
+    @include tablets {
+        flex-direction: column;
+        padding: 0 7%;
+    }
+
+    @include phones {
+        padding: 0;
+    }
 }
 
 .form__col {
     flex: 1;
-    margin-right: 20px;
+    margin-right: 1.25rem;
 
     &:last-child {
+        margin-right: 0;
+    }
+
+    @include tablets {
         margin-right: 0;
     }
 }
@@ -17,7 +30,7 @@
 
 .form__block {
     flex: 1;
-    margin-right: 20px;  
+    margin-right: 1.25rem;  
 
     &:last-child {
         margin-right: 0;
@@ -27,12 +40,21 @@
 .form__input {
     width: 100%;
     border: none;
-    padding: 18px 11px;
-    border: solid 3px transparent;
+    padding: 1.125rem 0.6875rem;
+    border: solid 0.1875rem transparent;
+    border-radius: 3px;
+
+    @include tablets {
+        padding: 0.375rem 0.6875rem;
+    }
 
     &--textarea {
-        height: 148px;
+        height: 9.25rem;
         resize: none;
+
+        @include tablets {
+            height: 6.25rem;
+        }
 
     }
 
@@ -45,9 +67,18 @@
 .form__controls {
     display: flex;
     flex-wrap: wrap;
-    padding-left: 12px;
+    padding-left: 0.75rem;
+
+    @include phones {
+        justify-content: center;
+    }
 }
 
 .form__btns {
-    margin-top: 53px;
+    margin-top: 3.3125rem;
+
+    @include tablets {
+        display: flex;
+        justify-content: center;
+    }
 }
