--- a/css/header.scss
+++ b/css/header.scss
@@ -1,23 +1,32 @@
 .header {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     color: white;
 }
 
 .menu {
     display: flex;
+    margin: 0 30px;
+    padding-top: 5px;
+
+    @include tablets {
+        display: none;
+    }
 }
 
 .menu__list {
     display: flex;
     align-items: center;
-    margin-right: 104px;
+    /*margin-right: 4.5rem;*/
     font-weight: bold;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .menu__item {
-    margin-right: 15px;
+    margin-right: 0.9375rem;
+    margin-bottom: 10px;
 
     &:last-child {
         margin-right: 0;
@@ -25,18 +34,34 @@
 }
 
 .phone-number {
-    font-size: 24px;
+    font-size: 1.5rem;
     text-decoration: none;
     display: flex;
     align-items: center;
 }
 
+.phone-number__icon {
+    flex-shrink: 0;
+}
+
+.phone-number__text {
+    white-space: nowrap;
+}
+
+.phone-number.header__phone-number {
+    @include tablets {
+        display: none;
+    }
+
+}
+
 .phone-number__icon-elem {
-    width: 12px;
-    height: 12px;
-    margin-right: 6px;
+    width: 0.75rem;
+    height: 0.75rem;
+    margin-right: 0.375rem;
 }
 
 .menu__link {
     text-decoration: none;
+    white-space: nowrap;
 }
