--- a/css/interactive-avatar.scss
+++ b/css/interactive-avatar.scss
@@ -1,7 +1,7 @@
 .interactive-avatar {
-    width: 80px;
-    height: 80px;
-    border: 6px solid transparent;
+    width: 5rem;
+    height: 5rem;
+    border: 0.375rem solid transparent;
     border-radius: 50%;
     overflow: hidden;
     position: relative;
