--- a/css/layout.scss
+++ b/css/layout.scss
@@ -1,10 +1,21 @@
+html {
+    font-size: $baseFontSize;
+
+    @include tablets {
+        font-size: $baseFontSize - 1px;
+    }
+
+    @include phones {
+        font-size: $baseFontSize - 2px;
+    }
+}
+
 html,
 body {
     height: 100%;
 }
 
 body {
-    font-size: $baseFontSize;
     line-height: 1.42;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -17,12 +28,13 @@ body {
     width: 100%;
     overflow: hidden;
     min-height: 100%;
-    min-width: $containerWidth + 20px;
 }
 
 .container {
-    width: $containerWidth;
+    width: 95%;
+    max-width: $containerWidth;
     margin: 0 auto;
+    position: relative;
 }
 
 h1,
