--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,25 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css");
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+html {
+  font-size: 18px;
+}
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 17px;
+  }
+}
+@media screen and (max-width: 480px) {
+  html {
+    font-size: 16px;
+  }
+}
+
 html,
 body {
   height: 100%;
 }
 
 body {
-  font-size: 18px;
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -19,12 +32,13 @@ body {
   width: 100%;
   overflow: hidden;
   min-height: 100%;
-  min-width: 960px;
 }
 
 .container {
-  width: 940px;
+  width: 95%;
+  max-width: 940px;
   margin: 0 auto;
+  position: relative;
 }
 
 h1,
@@ -77,13 +91,48 @@ img {
   background: url(https://rudanastasia.github.io/surfboard/img/decor/bgmain.png) center top no-repeat;
   background-color: white;
   /*height: 100vh;*/
-  min-height: 650px;
+  min-height: 40.625rem;
   background-size: cover;
+}
+@media screen and (max-width: 768px) {
+  .hero {
+    background: url(https://rudanastasia.github.io/surfboard/img/decor/tabletsbg.png) center top 5.625rem no-repeat;
+    background-size: cover;
+    height: 58.5625rem;
+  }
 }
 
 .hero__title-section {
   width: 46%;
-  margin-top: 107px;
+  margin-top: 6.6875rem;
+}
+@media screen and (max-width: 768px) {
+  .hero__title-section {
+    width: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero__icons-section {
+    display: none;
+  }
 }
 
 .hero__container {
@@ -98,33 +147,53 @@ img {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 100%;
-  padding: 24px 0 45px 0;
+  padding: 1.5rem 0 2.8125rem 0;
 }
 
 .hero__main-title {
-  font-size: 48px;
+  font-size: 3rem;
   line-height: 1.1;
   font-weight: bold;
-  margin-bottom: 15px;
+  margin-bottom: 0.9375rem;
   text-transform: uppercase;
   color: white;
 }
+@media screen and (max-width: 768px) {
+  .hero__main-title {
+    margin-top: 4.125rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .hero__main-title {
+    font-size: 2.5rem;
+  }
+}
 
 .hero__title-description {
-  font-size: 21px;
-  margin-bottom: 56px;
+  font-size: 1.3125rem;
+  margin-bottom: 3.5rem;
   padding-right: 10%;
   color: white;
-  margin-top: 26px;
+  margin-top: 1.625rem;
+}
+@media screen and (max-width: 768px) {
+  .hero__title-description {
+    padding: 0 23%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .hero__title-description {
+    padding: 0 10%;
+  }
 }
 
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -135,6 +204,13 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 0 30px;
+  padding-top: 5px;
+}
+@media screen and (max-width: 768px) {
+  .menu {
+    display: none;
+  }
 }
 
 .menu__list {
@@ -144,19 +220,25 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 104px;
+  /*margin-right: 4.5rem;*/
   font-weight: bold;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .menu__item {
-  margin-right: 15px;
+  margin-right: 0.9375rem;
+  margin-bottom: 10px;
 }
 .menu__item:last-child {
   margin-right: 0;
 }
 
 .phone-number {
-  font-size: 24px;
+  font-size: 1.5rem;
   text-decoration: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -166,14 +248,30 @@ img {
           align-items: center;
 }
 
+.phone-number__icon {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.phone-number__text {
+  white-space: nowrap;
+}
+
+@media screen and (max-width: 768px) {
+  .phone-number.header__phone-number {
+    display: none;
+  }
+}
+
 .phone-number__icon-elem {
-  width: 12px;
-  height: 12px;
-  margin-right: 6px;
+  width: 0.75rem;
+  height: 0.75rem;
+  margin-right: 0.375rem;
 }
 
 .menu__link {
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .features {
@@ -183,8 +281,8 @@ img {
 }
 
 .features__item {
-  margin-right: 46px;
-  margin-top: 78px;
+  margin-right: 2.875rem;
+  margin-top: 4.875rem;
 }
 .features__item:last-child {
   margin-right: 0;
@@ -197,23 +295,23 @@ img {
 }
 
 .feature__icon {
-  width: 45px;
-  margin-right: 7px;
+  width: 2.8125rem;
+  margin-right: 0.4375rem;
 }
 
 .feature__text {
-  font-size: 16px;
-  max-width: 85px;
+  font-size: 1rem;
+  max-width: 5.3125rem;
   color: white;
   font-weight: bold;
 }
 
 .btn {
-  font-size: 19px;
+  font-size: 1.1875rem;
   font-weight: bold;
-  padding: 18px 35px;
+  padding: 1.125rem 2.1875rem;
   text-transform: uppercase;
-  border-radius: 100px;
+  border-radius: 6.25rem;
   line-height: 1;
   text-decoration: none;
   border: none;
@@ -237,7 +335,10 @@ img {
 
 .section {
   /*height: 100vh;*/
-  min-height: 650px;
+  min-height: 40.625rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -245,6 +346,12 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+@media screen and (max-width: 768px) {
+  .section {
+    margin-bottom: 4.375rem;
+    padding-bottom: 6.25rem;
+  }
 }
 .section--font-color--white {
   color: white;
@@ -254,34 +361,53 @@ img {
 .section--font-color--white .section__title {
   color: inherit;
 }
+@media screen and (max-width: 768px) {
+  .section--font-color--white .section__title {
+    margin-bottom: 1.875rem;
+    padding-top: 10.875rem;
+  }
+}
 
 .section__title {
-  font-size: 48px;
+  font-size: 2.5rem;
   font-weight: bold;
-  margin-bottom: 60px;
+  margin-bottom: 1.75rem;
   text-align: center;
   text-transform: uppercase;
 }
 
 .headline {
   text-align: center;
-  margin-top: 100px;
+  margin-top: 6.25rem;
 }
 
 .headline__title {
-  margin-bottom: 11px;
+  margin-bottom: 0.6875rem;
 }
 
 .headline__subtitle {
   padding: 0 26%;
-  margin-bottom: 46px;
+  margin-bottom: 2.875rem;
+}
+@media screen and (max-width: 480px) {
+  .headline__subtitle {
+    padding: 0 8%;
+  }
 }
 
 .benefits {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 30px;
+  margin-top: 1.875rem;
+}
+@media screen and (max-width: 480px) {
+  .benefits {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .benefits__item {
@@ -291,13 +417,24 @@ img {
   padding: 0 3%;
   position: relative;
 }
+@media screen and (max-width: 480px) {
+  .benefits__item {
+    padding: 0;
+    margin-bottom: 25px;
+  }
+}
 .benefits__item:before {
   content: url(https://rudanastasia.github.io/surfboard/img/icons/separator.png);
   position: absolute;
   right: 0;
-  top: 52px;
+  top: 3.25rem;
   -webkit-transform: translateX(50%);
           transform: translateX(50%);
+}
+@media screen and (max-width: 480px) {
+  .benefits__item:before {
+    display: none;
+  }
 }
 .benefits__item:first-child {
   padding-left: 0;
@@ -312,21 +449,36 @@ img {
 .benefit {
   text-align: center;
 }
+@media screen and (max-width: 480px) {
+  .benefit {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .benefit__image {
+    margin-bottom: 0;
+    margin-right: 28px;
+  }
+}
 
 .benefit__image-wrapper {
   display: inline-block;
-  width: 126px;
-  height: 126px;
+  width: 7.875rem;
+  height: 7.875rem;
   position: relative;
   background: #F2F5F4;
   border-radius: 50%;
   overflow: hidden;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 
 .benefit__icon {
-  width: 75px;
-  height: 69px;
+  width: 4.6875rem;
+  height: 4.3125rem;
   position: absolute;
   top: 21%;
   left: 21%;
@@ -336,25 +488,42 @@ img {
 
 .benefit__title {
   font-weight: bold;
-  font-size: 27px;
+  font-size: 1.6875rem;
 }
 
 .benefit__desc {
-  font-size: 18px;
-  line-height: 21.6px;
+  font-size: 1.125rem;
+  line-height: 1.35rem;
   text-align: center;
-  width: 279px;
+  width: 17.4375rem;
+}
+@media screen and (max-width: 480px) {
+  .benefit__desc {
+    text-align: left;
+  }
 }
 
 .reviews__display {
   background: #F8FAF9;
-  padding: 42px 39px 34px;
+  padding: 2.625rem 2.4375rem 2.125rem;
 }
 
 .reviews__display-inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+@media screen and (max-width: 768px) {
+  .reviews__display-inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .reviews__switcher {
@@ -367,13 +536,19 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 
 .reviews__avatar {
-  width: 254px;
-  height: 260px;
-  margin-right: 20px;
+  width: 15.875rem;
+  height: 16.25rem;
+  margin-right: 1.25rem;
+}
+@media screen and (max-width: 768px) {
+  .reviews__avatar {
+    width: 8.125rem;
+    height: 8.125rem;
+  }
 }
 
 .reviews__avatar-img {
@@ -390,28 +565,28 @@ img {
 }
 
 .reviews__title {
-  font-size: 30px;
+  font-size: 1.875rem;
   font-weight: bold;
-  margin-bottom: 9px;
-  margin-top: 20px;
-  padding-left: 16px;
+  margin-bottom: 0.5625rem;
+  margin-top: 1.25rem;
+  padding-left: 1rem;
 }
 
 .reviews__text {
-  margin-bottom: 36px;
-  padding-left: 20px;
+  margin-bottom: 2.25rem;
+  padding-left: 1.25rem;
 }
 
 .reviews__author {
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: bold;
-  padding-left: 20px;
+  padding-left: 1.25rem;
 }
 
 .interactive-avatar {
-  width: 80px;
-  height: 80px;
-  border: 6px solid transparent;
+  width: 5rem;
+  height: 5rem;
+  border: 0.375rem solid transparent;
   border-radius: 50%;
   overflow: hidden;
   position: relative;
@@ -442,15 +617,34 @@ img {
   display: -ms-flexbox;
   display: flex;
 }
+@media screen and (max-width: 768px) {
+  .form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 7%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .form {
+    padding: 0;
+  }
+}
 
 .form__col {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-right: 20px;
+  margin-right: 1.25rem;
 }
 .form__col:last-child {
   margin-right: 0;
+}
+@media screen and (max-width: 768px) {
+  .form__col {
+    margin-right: 0;
+  }
 }
 
 .form__row {
@@ -463,7 +657,7 @@ img {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-right: 20px;
+  margin-right: 1.25rem;
 }
 .form__block:last-child {
   margin-right: 0;
@@ -472,12 +666,23 @@ img {
 .form__input {
   width: 100%;
   border: none;
-  padding: 18px 11px;
-  border: solid 3px transparent;
+  padding: 1.125rem 0.6875rem;
+  border: solid 0.1875rem transparent;
+  border-radius: 3px;
+}
+@media screen and (max-width: 768px) {
+  .form__input {
+    padding: 0.375rem 0.6875rem;
+  }
 }
 .form__input--textarea {
-  height: 148px;
+  height: 9.25rem;
   resize: none;
+}
+@media screen and (max-width: 768px) {
+  .form__input--textarea {
+    height: 6.25rem;
+  }
 }
 .form__input:focus {
   border-color: #FEDB3F;
@@ -490,11 +695,28 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding-left: 12px;
+  padding-left: 0.75rem;
+}
+@media screen and (max-width: 480px) {
+  .form__controls {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .form__btns {
-  margin-top: 53px;
+  margin-top: 3.3125rem;
+}
+@media screen and (max-width: 768px) {
+  .form__btns {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .radio {
@@ -506,9 +728,14 @@ img {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  margin-top: 27px;
-  margin-bottom: -7px;
-  padding-right: 27px;
+  margin-top: 1.6875rem;
+  margin-bottom: -0.4375rem;
+  padding-right: 1.6875rem;
+}
+@media screen and (max-width: 768px) {
+  .radio {
+    margin-top: 1.25rem;
+  }
 }
 .radio--checkbox .radio__visible {
   border-radius: 0;
@@ -525,17 +752,17 @@ img {
 }
 
 .radio__visible {
-  width: 26px;
-  height: 26px;
+  width: 1.625rem;
+  height: 1.625rem;
   position: relative;
   border-radius: 50%;
   background: white;
-  margin-right: 10px;
+  margin-right: 0.625rem;
 }
 .radio__visible:before {
   content: "";
-  width: 14px;
-  height: 14px;
+  width: 0.875rem;
+  height: 0.875rem;
   background: #FEDB3F;
   border-radius: 50%;
   position: absolute;
@@ -548,30 +775,35 @@ img {
 
 .fixed-menu {
   position: fixed;
-  top: 20%;
+  top: 23%;
   right: 3%;
   z-index: 100;
 }
+@media screen and (max-width: 768px) {
+  .fixed-menu {
+    display: none;
+  }
+}
 
 .fixed-menu__item {
-  margin-bottom: 5px;
+  margin-bottom: 0.3125rem;
 }
 .fixed-menu__item--active .fixed-menu__link {
   border-color: white;
 }
 
 .fixed-menu__link {
-  width: 16px;
-  height: 16px;
+  width: 1rem;
+  height: 1rem;
   border-radius: 50%;
-  border: 1px solid transparent;
+  border: 0.0625rem solid transparent;
   display: block;
   position: relative;
 }
 .fixed-menu__link:before {
   content: "";
-  width: 6px;
-  height: 6px;
+  width: 0.375rem;
+  height: 0.375rem;
   border-radius: 50%;
   display: block;
   background: white;
@@ -580,4 +812,31 @@ img {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+.hamburger {
+  width: 24px;
+  height: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .hamburger {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
+}
+
+.hamburger__plank {
+  display: block;
+  background: white;
+  height: 4px;
+  border-radius: 10px;
 }
