--- a/css/radio.scss
+++ b/css/radio.scss
@@ -2,9 +2,13 @@
     display: flex;
     cursor: pointer;
     user-select: none;
-    margin-top: 27px;
-    margin-bottom: -7px;
-    padding-right: 27px;
+    margin-top: 1.6875rem;
+    margin-bottom: -0.4375rem;
+    padding-right: 1.6875rem;
+
+    @include tablets {
+        margin-top: 1.25rem;
+    }
 
     &--checkbox {
         .radio__visible {
@@ -29,17 +33,17 @@
 }
 
 .radio__visible {
-    width: 26px;
-    height: 26px;
+    width: 1.625rem;
+    height: 1.625rem;
     position: relative;
     border-radius: 50%;
     background: white;
-    margin-right: 10px;
+    margin-right: 0.625rem;
 
     &:before {
         content: "";
-        width: 14px;
-        height: 14px;
+        width: 0.875rem;
+        height: 0.875rem;
         background: #FEDB3F;
         border-radius: 50%;
         position: absolute;
