--- a/css/section.scss
+++ b/css/section.scss
@@ -1,8 +1,14 @@
 .section {
     /*height: 100vh;*/
-    min-height: 650px;
+    min-height: 40.625rem;
+    display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @include tablets {
+        margin-bottom: 4.375rem;
+        padding-bottom: 6.25rem;
+    }
 
     &--font-color--white {
         color: white;
@@ -11,14 +17,19 @@
 
         .section__title {
             color: inherit;
+
+            @include tablets {
+                margin-bottom: 1.875rem;
+                padding-top: 10.875rem;
+            }
         }
     }
 }
 
 .section__title {
-    font-size: 48px;
+    font-size: 2.5rem;
     font-weight: bold;
-    margin-bottom: 60px;
+    margin-bottom: 1.75rem;
     text-align: center;
     text-transform: uppercase;
 }
