--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ img {
 }
 @media screen and (max-width: 768px) {
   .hero {
-    background: url(https://rudanastasia.github.io/surfboard/img/decor/tabletsbg.png) center top 5.625rem no-repeat;
+    background: url(https://rudanastasia.github.io/surfboard/img/decor/tabletsbg.png) center top no-repeat;
     background-size: cover;
     height: 58.5625rem;
   }
