--- a/css/hero.scss
+++ b/css/hero.scss
@@ -6,7 +6,7 @@
     background-size: cover;
 
     @include tablets {
-        background: url(https://rudanastasia.github.io/surfboard/img/decor/tabletsbg.png) center top 5.625rem no-repeat;
+        background: url(https://rudanastasia.github.io/surfboard/img/decor/tabletsbg.png) center top no-repeat;
         background-size: cover;
         height: 58.5625rem;
     }
