--- a/css/benefit.scss
+++ b/css/benefit.scss
@@ -1,5 +1,6 @@
 .benefit {
     text-align: center;
+    max-width: 36%;
 
     @include phones {
         display: flex;
@@ -45,6 +46,7 @@
     line-height: 1.35rem;
     text-align: center;
     width: 17.4375rem;
+    max-width: 100%;
 
     @include phones {
         text-align: left;
