--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ img {
 }
 @media screen and (max-width: 768px) {
   .hero {
-    background: url(https://rudanastasia.github.io/surfboard/img/decor/tabletsbg.png) center top no-repeat;
+    background: url(https://rudanastasia.github.io/surfboard/img/decor/tabletsbg.png) center top 5.625rem no-repeat;
     background-size: cover;
     height: 58.5625rem;
   }
@@ -400,6 +400,7 @@ img {
   display: -ms-flexbox;
   display: flex;
   margin-top: 1.875rem;
+  max-width: 95%;
 }
 @media screen and (max-width: 480px) {
   .benefits {
@@ -448,6 +449,7 @@ img {
 
 .benefit {
   text-align: center;
+  max-width: 36%;
 }
 @media screen and (max-width: 480px) {
   .benefit {
@@ -496,6 +498,7 @@ img {
   line-height: 1.35rem;
   text-align: center;
   width: 17.4375rem;
+  max-width: 100%;
 }
 @media screen and (max-width: 480px) {
   .benefit__desc {
@@ -839,4 +842,42 @@ img {
   background: white;
   height: 4px;
   border-radius: 10px;
+}
+
+.menu__burger {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #333537;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 1;
+  text-align: center;
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .menu__burger {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
+}
+
+.menu__burger__link {
+  text-decoration: none;
+  font-size: 36px;
+  line-height: 72px;
+  text-align: center;
+}
+.menu__burger__link:hover {
+  color: #FFD517;
 }
