--- a/css/main.css
+++ b/css/main.css
@@ -376,6 +376,27 @@ img {
   text-transform: uppercase;
 }
 
+.section__slaider {
+  min-height: 40.625rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #F8FAF9;
+}
+@media screen and (max-width: 768px) {
+  .section__slaider {
+    margin-bottom: 4.375rem;
+    padding-bottom: 6.25rem;
+  }
+}
+
 .headline {
   text-align: center;
   margin-top: 6.25rem;
@@ -880,4 +901,70 @@ img {
 }
 .menu__burger__link:hover {
   color: #FFD517;
+}
+
+.slider__all {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.slider__inner {
+  width: 45%;
+}
+
+.slaider__param {
+  margin-bottom: 30px;
+}
+
+.slider__title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 1.75rem;
+  text-transform: uppercase;
+}
+
+.slaider__desc {
+  color: #666666;
+  line-height: 21.6px;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.slider__tech {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.tech__dl {
+  margin-right: 83px;
+  margin-bottom: 40px;
+  margin-top: 40px;
+}
+
+.tech__dl__title {
+  color: #666666;
+  font-size: 18px;
+  line-height: 21.6px;
+  font-weight: 400;
+}
+
+.tech__dl__desc {
+  font-size: 18px;
+  line-height: 21.6px;
+  font-weight: 700;
+}
+
+.slider__cust {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.slider__price {
+  font-size: 60px;
+  line-height: 60px;
+  font-weight: 300;
+  margin-right: 83px;
 }
