--- a/css/slider.scss
+++ b/css/slider.scss
@@ -7,7 +7,7 @@
 }
 
 .slaider__param {
-    margin-bottom: 30px;
+    margin-bottom: 1.875rem;
 }
 
 .slider__title {
@@ -20,8 +20,8 @@
 
 .slaider__desc {
     color: #666666;
-    line-height: 21.6px;
-    font-size: 18px;
+    line-height: 1.35rem;
+    font-size: 1.125rem;
     font-weight: 400;
 }
 
@@ -30,22 +30,22 @@
 }
 
 .tech__dl {
-    margin-right: 83px;
-    margin-bottom: 40px;
-    margin-top: 40px;
+    margin-right: 3.1875rem;
+    margin-bottom: 2.5rem;
+    margin-top: 2.5rem;
 }
 
 
 .tech__dl__title {
     color: #666666;
-    font-size: 18px;
-    line-height: 21.6px;
+    font-size: 1.125rem;
+    line-height: 1.35rem;
     font-weight: 400;
 }
 
 .tech__dl__desc {
-    font-size: 18px;
-    line-height: 21.6px;
+    font-size: 1.125rem;
+    line-height: 1.35rem;
     font-weight: 700;
 }
 
@@ -54,8 +54,12 @@
 }
 
 .slider__price {
-    font-size: 60px;
-    line-height: 60px;
+    font-size: 3.75rem;
+    line-height: 3.75rem;
     font-weight: 300;
-    margin-right: 83px;
+    margin-right: 3.1875rem;
+}
+
+.slider__btn {
+    margin-top: 1.125rem;
 }
