--- a/css/burger-menu.scss
+++ b/css/burger-menu.scss
@@ -1,4 +1,4 @@
-.menu__burger {
+/*.menu__burger {
     position: fixed;
     top: 0;
     left: 0;
@@ -26,4 +26,4 @@
     &:hover {
         color: #FFD517;
     }
-}
+}*/
