--- a/css/interactive-avatar.scss
+++ b/css/interactive-avatar.scss
@@ -1,4 +1,4 @@
-.interactive-avatar {
+.reviews__switcher-item {
     width: 5rem;
     height: 5rem;
     border: 0.375rem solid transparent;
@@ -11,7 +11,7 @@
     }
 }
 
-.interactive-avatar__link {
+.reviews__switcher-item__link {
     position: absolute;
     top: 0;
     left: 0;
@@ -20,7 +20,7 @@
     display: block;
 }
 
-.interactive-avatar__img {
+.reviews__switcher-item__img {
     display: block;
     width: 100%;
     height: 100%;
