--- a/css/main.css
+++ b/css/main.css
@@ -273,6 +273,51 @@ img {
   text-decoration: none;
   white-space: nowrap;
 }
+@media screen and (max-width: 768px) {
+  .menu__link {
+    text-decoration: none;
+    font-size: 36px;
+    line-height: 72px;
+    text-align: center;
+  }
+  .menu__link:hover {
+    color: #FFD517;
+  }
+}
+
+.modal__close {
+  position: absolute;
+  right: 100px;
+  top: 100px;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #333537;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 1;
+  text-align: center;
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .modal {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
+}
 
 .features {
   display: -webkit-box;
@@ -607,7 +652,7 @@ img {
   padding-left: 1.25rem;
 }
 
-.interactive-avatar {
+.reviews__switcher-item {
   width: 5rem;
   height: 5rem;
   border: 0.375rem solid transparent;
@@ -615,11 +660,11 @@ img {
   overflow: hidden;
   position: relative;
 }
-.interactive-avatar--active {
+.reviews__switcher-item--active {
   border-color: #FEDB3F;
 }
 
-.interactive-avatar__link {
+.reviews__switcher-item__link {
   position: absolute;
   top: 0;
   left: 0;
@@ -628,7 +673,7 @@ img {
   display: block;
 }
 
-.interactive-avatar__img {
+.reviews__switcher-item__img {
   display: block;
   width: 100%;
   height: 100%;
@@ -865,58 +910,82 @@ img {
   border-radius: 10px;
 }
 
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #333537;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  z-index: 1;
-  text-align: center;
-  display: none;
-}
-@media screen and (max-width: 768px) {
-  .modal {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-  }
+/*.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #333537;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    text-align: center;
+    display: none;
+
+    @include tablets {
+        display: inline-flex;
+    }
 }
 
 .menu__burger__link {
-  text-decoration: none;
-  font-size: 36px;
-  line-height: 72px;
-  text-align: center;
-}
-.menu__burger__link:hover {
-  color: #FFD517;
+    text-decoration: none;
+    font-size: 36px;
+    line-height: 72px;
+    text-align: center;
+
+    &:hover {
+        color: #FFD517;
+    }
 }
 
 .modal__close {
-  position: absolute;
-  right: 100px;
-  top: 100px;
-}
-
+    position:absolute;
+    right: 100px;
+    top: 100px;
+}*/
 .slider__all {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  left: 0px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 @media screen and (max-width: 768px) {
   .slider__all {
     /*display: block;*/
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+}
+
+.slider__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  width: 100%;
+}
+@media screen and (max-width: 768px) {
+  .slider__item {
+    /* display: block; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
