--- a/css/interactive-avatar.scss
+++ b/css/interactive-avatar.scss
@@ -1,17 +1,18 @@
-.reviews__switcher-item {
+.reviews-switcher__item {
     width: 5rem;
     height: 5rem;
     border: 0.375rem solid transparent;
     border-radius: 50%;
     overflow: hidden;
     position: relative;
+    cursor: pointer;
 
     &--active {
         border-color: #FEDB3F;
     }
 }
 
-.reviews__switcher-item__link {
+.reviews-switcher__link {
     position: absolute;
     top: 0;
     left: 0;
@@ -20,7 +21,7 @@
     display: block;
 }
 
-.reviews__switcher-item__img {
+.reviews-switcher__img {
     display: block;
     width: 100%;
     height: 100%;
