--- a/css/products.scss
+++ b/css/products.scss
@@ -123,4 +123,14 @@
     }
   }
   
-  
+.products-menu__title-longboard {
+    background: url(https://rudanastasia.github.io/surfboard/img/decor/long.png);
+}
+
+.products-menu__title-shortboard {
+    background: url(https://rudanastasia.github.io/surfboard/img/decor/short.png);
+}
+
+.products-menu__title-softtop {
+    background: url(https://rudanastasia.github.io/surfboard/img/decor/soft.png);
+}
